# AIxIA-2024

./: README.md
code/: pyproject.toml
code/cfg/: datasets_config.json  system_config.json
code/cfg/model_configs/pytorch_transformer/: ms_badura_single-cof_midilike_tokeniser.json  ms_badura_single-cof_notelike_tokeniser.json  ms_badura_single-large_vocabulary_cof_notelike_tokeniser.json  ms_badura_single-large_vocabulary_notelike_tokeniser.json  ms_badura_single-relative_midilike_tokeniser.json  ms_badura_single-relative_notelike_tokeniser.json  ms_badura_single-standard_midilike_tokeniser.json  (+1 more)
code/paul3/commands/: command_convert.py  command_data.py  command_infer.py  command_metrics.py  command_shared.py  command_train.py
code/paul3/data/: base_dataset.py
code/paul3/enumerations/: attention_output_mode.py  dataset_type.py  hyperparameter_type.py  info_type.py  mask_type.py  model_type.py  multi_head_attention_callback_mode.py
code/paul3/exceptions/: data_exception.py  hyperparameter_exception.py  model_exception.py
code/paul3/main/: argument_handling.py  distributed.py  main.py
code/paul3/management/: manager_base.py  manager_inference.py  manager_metrics.py  manager_train.py
code/paul3/models/: base_classes.py  museformer_single_stream.py  pytorch_hacked_single_stream_transformer.py  pytorch_single_stream_transformer.py
code/paul3/network/: attention.py  layers.py  layouting.py  learning_rates.py  loss.py  modules.py
code/paul3/utils/: inference_constrainer.py  istarmap.py  paul_logging.py  settings.py  triton_operation_holder.py  utility.py
(+593 files in other folders)
